# Buyme

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
Buyme/: manage.py  pytest.ini
Buyme/Buyme/: asgi.py  settings.py  urls.py  wsgi.py
Buyme/payment/: models.py  urls.py  views.py
Buyme/payment/migrations/: 0001_initial.py  0002_alter_item_price.py  0003_alter_item_description_alter_item_name_and_more.py  0004_item_currency.py
Buyme/templates/: item.html  main.html  success.html
Buyme/tests/: conftest.py  test_api.py
